Increased height of homepage banner to fix gap in Firefox.

--- a/sites/all/themes/nema/css/styles.css
+++ b/sites/all/themes/nema/css/styles.css
@@ -1794,7 +1794,7 @@ tr.selected td {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 387px;
+  height: 392px;
 }
 
 /* line 11, ../sass/components/_homepage-banner.scss */
