--- a/sites/all/themes/nema/sass/components/_homepage-banner.scss
+++ b/sites/all/themes/nema/sass/components/_homepage-banner.scss
@@ -5,7 +5,7 @@
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	height: 387px;
+	height: 392px;
 }
 .lt-ie9 {
 	.banner-wrapper {
